--- a/test/data/estimate-self-assessment-penalties-responses-and-expected-results.yml
+++ b/test/data/estimate-self-assessment-penalties-responses-and-expected-results.yml
@@ -3934,3 +3934,269 @@
   - '2017-04-08'
   :next_node: :filed_and_paid_on_time
   :outcome_node: true
+
+- :current_node: :which_year?
+  :responses:
+  - 2017-18
+  :next_node: :how_submitted?
+  :outcome_node: false
+- :current_node: :how_submitted?
+  :responses:
+  - 2017-18
+  - online
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2014-04-05'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2014-04-07'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2015-01-31'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2015-04-30'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2015-07-31'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2015-04-07'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2016-04-07'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2014-04-06'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2014-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2015-01-31'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2015-03-02'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2016-01-31'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2015-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2016-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - online
+  - '2017-04-07'
+  - '2017-04-08'
+  :next_node: :filed_and_paid_on_time
+  :outcome_node: true
+- :current_node: :how_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2014-04-05'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2014-04-07'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2015-01-31'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2015-04-30'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2015-07-31'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2015-04-07'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2016-04-07'
+  :next_node: :when_submitted?
+  :outcome_node: false
+- :current_node: :when_submitted?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2014-04-06'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2014-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2015-01-31'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2015-03-02'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2016-01-31'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2015-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2016-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2017-04-07'
+  - '2017-04-08'
+  :next_node: :when_paid?
+  :outcome_node: false
+- :current_node: :when_paid?
+  :responses:
+  - 2017-18
+  - paper
+  - '2018-04-07'
+  - '2018-04-08'
+  :next_node: :filed_and_paid_on_time
+  :outcome_node: true
