Add same sex marriage content for Austria
Trello cards:
- https://trello.com/c/OhrOk2AQ/1978-add-same-sex-marriage-to-austria-getting-married-abroad
- https://trello.com/c/Jw8oV95g/731-add-same-sex-marriage-content-to-austria-marriage-abroad

Co-Authored-By: hannahwhittaker <hannah.whittaker@digital.cabinet-office.gov.uk>

--- a/lib/data/marriage_abroad_services.yml
+++ b/lib/data/marriage_abroad_services.yml
@@ -261,8 +261,9 @@ austria:
   same_sex:
     default:
       default:
+      - :receiving_notice_of_marriage
       - :issuing_cni_or_nulla_osta
-  payment_partial_name: pay_by_cash_or_credit_card_no_cheque
+  payment_partial_name: pay_by_visa_masterdcard_sometimes_cash_or_friends_card
 azerbaijan:
   opposite_sex:
     ceremony_country:
