Adding in fees for same sex marriage in Panama

--- a/lib/data/marriage_abroad_services.yml
+++ b/lib/data/marriage_abroad_services.yml
@@ -578,6 +578,10 @@ nicaragua:
       - :issuing_marriage_certificate
   payment_partial_name: pay_by_cash_or_credit_card_no_cheque
 panama:
+  same_sex:
+      - :receiving_notice_of_marriage
+      - :issuing_cni_or_nulla_osta
+      - :registering_marriage
   opposite_sex:
     ceremony_country:
       default:
