Panama same-sex outcomes don't depend on the partner's nationality

--- a/lib/data/marriage_abroad_services.yml
+++ b/lib/data/marriage_abroad_services.yml
@@ -579,6 +579,7 @@ nicaragua:
   payment_partial_name: pay_by_cash_or_credit_card_no_cheque
 panama:
   same_sex:
+    default:
       default:
       - :receiving_notice_of_marriage
       - :issuing_cni_or_nulla_osta
