--- a/lib/data/rates/maternity_paternity_adoption.yml
+++ b/lib/data/rates/maternity_paternity_adoption.yml
@@ -21,5 +21,8 @@
   end_date: 2018-04-05
   lower_earning_limit_rate: 113
 - start_date: 2018-04-06
-  end_date: 2100-04-05
+  end_date: 2019-04-05
   lower_earning_limit_rate: 116
+- start_date: 2019-04-06
+  end_date: 2100-04-05
+  lower_earning_limit_rate: 118
