--- a/lib/data/prisoner_packs.yml
+++ b/lib/data/prisoner_packs.yml
@@ -303,7 +303,7 @@
   translators: /government/publications/british-embassy-luxembourg-translators
   prison: /government/publications/british-embassy-luxembourg-prisoner-pack
 - slug: macao
-- slug: macedonia
+- slug: north-macedonia
   pdf: /government/publications/macedonia-prisoner-pack
 - slug: madagascar
   lawyer: /government/publications/madagascar-list-of-lawyers
