--- a/lib/data/translators.yml
+++ b/lib/data/translators.yml
@@ -43,7 +43,7 @@ lebanon: /government/publications/lebanon-list-of-lawyers
 libya: /government/publications/libya-list-of-translators
 lithuania: /government/publications/lithuania-list-of-lawyers
 luxembourg: /government/publications/british-embassy-luxembourg-translators
-macedonia: /government/publications/macedonia-list-of-lawyers
+north-macedonia: /government/publications/macedonia-list-of-lawyers
 mexico: /government/publications/mexico-list-of-lawyers
 moldova: /government/publications/moldova-list-of-lawyers
 montenegro: /government/publications/montenegro-list-of-lawyers
