Rename missed instances of Macedonia + minor edits
- Rename missed instances of macedonia/Macedonia to
  north-macedonia/Nort Macedonia
- Rename files
- Alphabetically reorder North Macedonia instances

--- a/test/data/marriage-abroad-questions-and-responses.yml
+++ b/test/data/marriage-abroad-questions-and-responses.yml
@@ -71,7 +71,8 @@
 - lithuania
 - luxembourg
 - macao
-- macedonia
+- madagascar
+- malawi
 - malaysia
 - maldives
 - malta
@@ -88,6 +89,7 @@
 - new-zealand
 - nicaragua
 - north-korea
+- north-macedonia
 - norway
 - oman
 - panama
