Rename "Macedonia" to "North Macedonia"
HM Government's FCO has officially recognised the change of Macedonia's
name to North Macedonia:
gov.uk/government/news/foreign-secretary-statement-on-the-republic-of-north-macedonia

Co-Authored-By: Debrah Chua <deborah.chua@digital.cabinet-office.gov.uk>

--- a/lib/data/translators.yml
+++ b/lib/data/translators.yml
@@ -43,7 +43,6 @@ lebanon: /government/publications/lebanon-list-of-lawyers
 libya: /government/publications/libya-list-of-translators
 lithuania: /government/publications/lithuania-list-of-lawyers
 luxembourg: /government/publications/british-embassy-luxembourg-translators
-macedonia: /government/publications/macedonia-list-of-lawyers
 mexico: /government/publications/mexico-list-of-lawyers
 moldova: /government/publications/moldova-list-of-lawyers
 montenegro: /government/publications/montenegro-list-of-lawyers
@@ -53,6 +52,7 @@ namibia: /government/publications/namibia-list-of-lawyers
 nepal: /government/publications/nepal-list-of-lawyers
 netherlands: /government/publications/netherlands-list-of-lawyers
 nicaragua: /government/publications/nicaragua-list-of-lawyers
+north-macedonia: /government/publications/north-macedonia-lawyers
 paraguay: /government/publications/list-of-english-speaking-lawyers-and-translators-in-paraguay
 portugal: /government/publications/portugal-list-of-translators-and-interpreters
 russia: /government/publications/russia-list-of-lawyers
