--- a/script/marriage-abroad-services-updates/same_sex_removals.yml
+++ b/script/marriage-abroad-services-updates/same_sex_removals.yml
@@ -86,7 +86,6 @@
 - libya
 - liechtenstein
 - macao
-- macedonia
 - madagascar
 - malawi
 - malaysia
@@ -109,6 +108,7 @@
 - niger
 - nigeria
 - north-korea
+- north-macedonia
 - oman
 - pakistan
 - palau
