--- a/test/fixtures/worldwide_locations.yml
+++ b/test/fixtures/worldwide_locations.yml
@@ -118,7 +118,6 @@
 - lithuania
 - luxembourg
 - macao
-- macedonia
 - madagascar
 - malawi
 - malaysia
@@ -149,6 +148,7 @@
 - niger
 - nigeria
 - north-korea
+- north-macedonia
 - norway
 - oman
 - pakistan
