--- a/lib/data/rates/statutory_sick_pay.yml
+++ b/lib/data/rates/statutory_sick_pay.yml
@@ -38,3 +38,8 @@
   end_date: 2019-04-05
   lower_earning_limit_rate: 116
   ssp_weekly_rate: 92.05
+
+- start_date: 2019-04-06
+  end_date: 2020-04-05
+  lower_earning_limit_rate: 118
+  ssp_weekly_rate: 94.25
