--- a/lib/data/rates/personal_allowance.yml
+++ b/lib/data/rates/personal_allowance.yml
@@ -33,3 +33,17 @@
   higher_allowance_1: 11000
   higher_allowance_2: 11000
   income_limit_for_personal_allowances: 28000.0
+
+- start_date: 2018-04-06
+  end_date: 2019-04-05
+  personal_allowance: 11850
+  higher_allowance_1: 11850
+  higher_allowance_2: 11850
+  income_limit_for_personal_allowances: 28900.0
+
+- start_date: 2019-04-06
+  end_date: 2020-04-05
+  personal_allowance: 12500
+  higher_allowance_1: 12500
+  higher_allowance_2: 12500
+  income_limit_for_personal_allowances: 29600.0
